<resources>
    <string name="app_name">Trianglify</string>
    <string name="action_settings">Settings</string>
    <string name="wallpaper_description">Trianglify Live Wallpaper</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="inline_preferences">General</string>
    <string name="title_checkbox_preference">test2</string>
    <string name="summary_checkbox_preference">test3</string>
    <string name="dialog_based_preferences">test4</string>
    <string name="title_edittext_preference">test5</string>
    <string name="summary_edittext_preference">test6</string>
    <string name="dialog_title_edittext_preference">test6</string>
    <string name="title_list_preference">test7</string>
    <string name="summary_list_preference">test8</string>
    <string name="dialog_title_list_preference">test11</string>
    <string name="settings_summary">$1 seconds</string>
    <string name="settings_dialog_message">Select how many seconds should be waited till the next wallpaper is displayed. 0 seconds = no change</string>
    <string name="settings_unit">seconds</string>
    <string name="settings_title">Wait time between wallpapers</string>
</resources>
